# routes/index.js
@@ -8,7 +8,6 @@ router.get('/', (req, res) => {
     res.send('Welcome to Project1..');
 });
 
-// router.use('/users', require('../OTHERS/unused-routes/users'));
 router.use('/contacts', require('./contacts'));
 
 module.exports = router;
